@@ -22,11 +22,23 @@
 package org.opennms.netmgt.poller.monitors;
 
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertTrue;
 
 import java.net.UnknownHostException;
+import java.time.Duration;
+import java.time.Instant;
+import java.util.ArrayList;
+import java.util.Date;
 import java.util.HashMap;
+import java.util.List;
 
+import org.junit.Test;
 import org.opennms.core.utils.InetAddressUtils;
+import org.opennms.netmgt.events.api.model.IEvent;
+import org.opennms.netmgt.events.api.model.IParm;
+import org.opennms.netmgt.events.api.model.ImmutableEvent;
+import org.opennms.netmgt.events.api.model.ImmutableParm;
+import org.opennms.netmgt.events.api.model.ImmutableValue;
 import org.opennms.netmgt.passive.PassiveStatusKeeper;
 import org.opennms.netmgt.passive.PassiveStatusKeeperIT;
 import org.opennms.netmgt.poller.MonitoredService;
@@ -61,4 +73,59 @@ public class PassiveServiceMonitorIT extends PassiveStatusKeeperIT {
         return new PollableService(new PollableInterface(new PollableNode(new PollableNetwork(new MockPollContext()), nodeId, nodeLabel, nodeLocation), InetAddressUtils.addr(ipAddr)), serviceName);
     }
 
+    /**
+     * See NMS-14199, test case event with time set
+     */
+    @Test
+    public void testWithTimestamp() throws UnknownHostException {
+        final PassiveStatusKeeper psk = PassiveStatusKeeper.getInstance();
+        final List<IParm> parms = new ArrayList<>();
+        parms.add(ImmutableParm.newBuilder().setParmName("passiveNodeLabel").setValue(ImmutableValue.newBuilder().setContent("fooBar").build()).build());
+        parms.add(ImmutableParm.newBuilder().setParmName("passiveIpAddr").setValue(ImmutableValue.newBuilder().setContent("10.10.10.10").build()).build());
+        parms.add(ImmutableParm.newBuilder().setParmName("passiveServiceName").setValue(ImmutableValue.newBuilder().setContent("theService").build()).build());
+        parms.add(ImmutableParm.newBuilder().setParmName("passiveStatus").setValue(ImmutableValue.newBuilder().setContent("Up").build()).build());
+        parms.add(ImmutableParm.newBuilder().setParmName("passiveReasonCode").setValue(ImmutableValue.newBuilder().setContent("Some reason").build()).build());
+
+        final Date someMinutesAgo = Date.from(Instant.now().minus(Duration.ofMinutes(13)));
+
+        final IEvent e = ImmutableEvent.newBuilder()
+                .setUei("uei.opennms.org/services/passiveServiceStatus")
+                .setParms(parms)
+                .setTime(someMinutesAgo)
+                .build();
+
+        psk.onEvent(e);
+
+        final MonitoredService ms = createMonitoredService(1, "fooBar", null, "10.10.10.10", "theService");
+        final ServiceMonitor sm = new PassiveServiceMonitor();
+
+        assertEquals(someMinutesAgo, sm.poll(ms, new HashMap<>()).getTimestamp());
+    }
+
+    /**
+     * See NMS-14199, test case event without time set
+     */
+    @Test
+    public void testWithoutTimestamp() throws UnknownHostException {
+        final PassiveStatusKeeper psk = PassiveStatusKeeper.getInstance();
+        final List<IParm> parms = new ArrayList<>();
+        parms.add(ImmutableParm.newBuilder().setParmName("passiveNodeLabel").setValue(ImmutableValue.newBuilder().setContent("fooBar").build()).build());
+        parms.add(ImmutableParm.newBuilder().setParmName("passiveIpAddr").setValue(ImmutableValue.newBuilder().setContent("10.10.10.10").build()).build());
+        parms.add(ImmutableParm.newBuilder().setParmName("passiveServiceName").setValue(ImmutableValue.newBuilder().setContent("theService").build()).build());
+        parms.add(ImmutableParm.newBuilder().setParmName("passiveStatus").setValue(ImmutableValue.newBuilder().setContent("Up").build()).build());
+        parms.add(ImmutableParm.newBuilder().setParmName("passiveReasonCode").setValue(ImmutableValue.newBuilder().setContent("Some reason").build()).build());
+
+        final IEvent e = ImmutableEvent.newBuilder()
+                .setUei("uei.opennms.org/services/passiveServiceStatus")
+                .setParms(parms)
+                .build();
+
+        psk.onEvent(e);
+
+        final MonitoredService ms = createMonitoredService(1, "fooBar", null, "10.10.10.10", "theService");
+        final ServiceMonitor sm = new PassiveServiceMonitor();
+        final Date now = new Date();
+
+        assertTrue(sm.poll(ms, new HashMap<>()).getTimestamp().getTime() - now.getTime() < 1000);
+    }
 }
