@@ -29,6 +29,12 @@ An enhanced node list has been introduced with options for sorting and filtering
 
 == Breaking changes
 
+=== Passive Status Monitor
+The Passive Status Monitor previously used the time of the event's arrival as the timestamp of the status.
+As this is too imprecise for some use cases, the time field of the event is now also evaluated.
+If the field is set, it is adopted unchanged as the timestamp of the status.
+If no time is set, the timestamp is generated as before when the event arrives.
+
 === Docker image changes
 
 The Docker images for the core, minion, and sentinel have been changed from being Ubuntu-based to using RedHat's link:https://www.redhat.com/en/blog/introducing-red-hat-universal-base-image[Universal Base Image].
